Fix Context Menu hint visibility

--- a/SCSS/Modern Dark Theme.scss
+++ b/SCSS/Modern Dark Theme.scss
@@ -3163,6 +3163,16 @@
 								.text-gray-100 {
 									color: var(--darkmode-text);
 								}
+								> div:nth-of-type(3) {
+									transform: scale(1.1);
+									
+									> div {
+										color: var(--darkmode-contrast) !important;
+										opacity: .9;
+										border-color: #000 !important;
+										background-color: var(--darkmode-background-selected-darker);
+									}
+								}
 							}
 						}
 					// Slash Command Focused Item
